Fix layout shift
The `main` element is, weirdly enough, not part of the `docRoot`
element at first load. So I'm just specifically targeting the docRoot
width under these conditions.

--- a/docusaurus/src/scss/_base.scss
+++ b/docusaurus/src/scss/_base.scss
@@ -24,6 +24,10 @@ main {
   }
 }
 
+  [class*="docRoot"]:not(:has(main)) {
+    width: 0;
+  }
+
 /**
  * Experimental: Different identity based on URL
  */
@@ -59,7 +63,12 @@ main {
       padding-right: 32px !important;
     }
   }
+
+  [class*="docRoot"]:not(:has(main)) {
+    width: 300px;
+  }
 }
+
 
 /** Dark mode */
 @include dark {
